[package]
name = "lw01_window"
version = "0.1.0"
authors = ["CatCode79 https://github.com/CatCode79"]
edition = "2021"
description = "based on https://sotrh.github.io/learn-wgpu/beginner/tutorial1-window/"
publish = false

[dependencies]
env_logger = "0.8"
irid = { git="https://github.com/CatCode79/irid-framework", rev="master" }
log = "0.4"
winit = "0.25"
