[package]
name = "lw02_swapchain"
version = "0.0.12"
authors = ["CatCode79 https://github.com/CatCode79"]
edition = "2018"
#rust-version = "1.48"
description = "based on https://sotrh.github.io/learn-wgpu/beginner/tutorial2-surface/"
repository = "https://github.com/irid-game-framework/lw-examples"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
env_logger = "0.9"
irid = { git="https://github.com/irid-game-framework/irid" }
log = "0.4"
wgpu = "0.12"
winit = "0.26"
