[package]
name = "lw03_pipeline"
version = "0.1.0"
authors = ["CatCode79 https://github.com/CatCode79"]
edition = "2021"
description = "based on https://sotrh.github.io/learn-wgpu/beginner/tutorial3-pipeline/"
publish = false

[dependencies]
env_logger = "0.9"
#irid = { git="https://github.com/CatCode79/irid-framework", rev="master" }
irid = { path="D:/_IRID_PROJECT/_IRID-FRAMEWORK/irid-framework/irid" }
log = "0.4"
wgpu = "0.11"
winit = "0.25"
