[package]
name = "lw04_buffers_indices"
version = "0.1.0"
authors = ["CatCode79 https://github.com/CatCode79"]
edition = "2021"
description = "based on https://sotrh.github.io/learn-wgpu/beginner/tutorial4-buffer/"
publish = false

[dependencies]
env_logger = "0.9"
log = "0.4"
wgpu = "0.11"
winit = "0.25"

[dependencies.irid-framework]
git = "https://github.com/CatCode79/irid-framework"
