[package]
name = "lw04_buffers_indices"
version = "0.11.0"
authors = ["CatCode79 https://github.com/CatCode79"]
edition = "2018"
rust-version = "1.48"
description = "based on https://sotrh.github.io/learn-wgpu/beginner/tutorial4-buffer/"
repository = "https://github.com/irid-game-framework/lw-examples"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
env_logger = "0.9"
log = "0.4"
#irid = { git = "https://github.com/CatCode79/irid-framework" }
#irid_assets = { git = "https://github.com/CatCode79/irid-framework" }
irid = { path="D:/_IRID_PROJECT/_IRID-FRAMEWORK/irid-framework/irid"}
irid_assets = { path="D:/_IRID_PROJECT/_IRID-FRAMEWORK/irid-framework/irid_assets"}
wgpu = "0.11"
winit = "0.25"
