[package]
name = "lw09_model_loading"
version = "0.0.12"
authors = ["CatCode79 https://github.com/CatCode79"]
edition = "2018"
#rust-version = "1.48"
description = "based on https://sotrh.github.io/learn-wgpu/beginner/tutorial9-models/"
repository = "https://github.com/irid-game-framework/lw-examples"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
env_logger = "0.9"
#irid = { git="https://github.com/irid-game-framework/irid" }
#irid_assets = { git = "https://github.com/irid-game-framework/irid" }
irid = { path="D:/_IRID_PROJECT/_IRID-FRAMEWORK/irid-framework/irid"}
irid_assets = { path="D:/_IRID_PROJECT/_IRID-FRAMEWORK/irid-framework/irid_assets"}
log = "0.4"
wgpu = "0.12"
winit = "0.26"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"  # but, it's used anymore?
